# pet-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_HANDOFF.md  README.ko.md  README.md  SECURITY.md  install.cmd  pyproject.toml  security_best_practices_report.md
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.hermes/: handoff.json
alba/: __init__.py  backend.py  preset.py  preset_manager.py  security.py  state.py  state_manager.py  team_state.schema.json
docs/: ABOUT.md  ADAPTER_BOUNDARY.md  ARCHITECTURE.md  CODER_TO_QA_KOREAN_LOCALIZATION.md  CODER_TO_QA_M4_ASSET_GUARDRAILS.md  CODER_TO_QA_P2_SESSION_RESTORE.md  CODEX_INTEGRATION.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING_IDEAS.md  CREATE_ROOM.md  DEMO_SCRIPT.md  DEVELOPMENT.md  GITHUB_METADATA.md  INSTALL.md  PET_STUDIO_ORCHESTRATION_PLAN.md  PET_STUDIO_ROADMAP.ko.md  PET_STUDIO_ROADMAP.md  PET_STUDIO_WORKROOM_VISION.ko.md  PET_STUDIO_WORKROOM_VISION.md  PROJECT_HANDOFF.md  PROJECT_ROOM_ROADMAP.md  SOCIAL_PREVIEW.md  UX_PRIORITIES.md
hooks/: hooks.codex.json
pet-studio-kit/: README.md  SKILL.md  generation-workflow.json
pet-studio-widget/: README.md  codex_pet_hook.py  codex_state_adapter.py  pet_studio_event_adapter.py  pet_studio_registry.py  pet_studio_widget.py  project-room-projects.json  project_room_model_cli.py  project_room_registry.py  project_room_scene.py  project_room_widget.py  run-gakju-imagegen-room-v1.bat  set_active_pet_studio.py  set_active_project.py  set_pet_studio_state.py  set_project_state.py  team_room_panel.py
roost/: packet.py  (+12 more)
(+184 files in other folders)
